--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ymir-codegen",
+  "name": "chaos-library",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -10,13 +10,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.2.0",
-    "bluebird": "^3.5.3",
-    "del": "^3.0.0",
     "joi": "^14.3.1",
-    "lodash": "^4.17.11",
-    "mkdirp": "^0.5.1",
-    "ncp": "^2.0.0",
-    "replace-in-file": "^3.4.3"
+    "lodash": "^4.17.11"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
