--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "eslint": "^5.11.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "webpack": "^4.29.3"
   },
   "repository": {
     "type": "git",
